--- a/nutrition.html
+++ b/nutrition.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Student's Name, Current Date -->
+<!-- This website template was created by: Didar Orazgeldiyev, Sep 8, 2023 -->
 <html lang="en">
 <head>
 	<title>Forward Fitness Club</title>
